# backend-we-eat

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
backend_we_eat/models/food/: intolerance.py
backend_we_eat/models/session/: session.py  user.py
backend_we_eat/routers/v1/: recepies.py  session.py
backend_we_eat/utils/: edamam.py
